# podman-rest-client

./: Cargo.toml
openapi-client-gen/: Cargo.toml
openapi-client-gen/src/: parameter.rs
openapi-client-gen/src/lang/: rust.rs
src/: config.rs  error.rs  lib.rs  podman_rest_client.rs
swagger/: swagger.patch
tests/: v5.rs  v5_common.rs
