[workspace]
members = [".", "openapi-client-gen"]

[workspace.package]
version = "0.13.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/blazzy/podman-rest-client"

[package]
name = "podman-rest-client"
description = "Interface for querying the podman REST API."
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[workspace.dependencies]
hyper = { version = "1.7.0", features = ["full"] }

[dependencies]
async-trait = "0.1.89"
http = "1.3.1"
hyper.workspace = true
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["client-legacy", "http1"] }
nix = { version = "0.29.0", features = ["user"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["process"] }
tower-service = "0.3.3"
serde_path_to_error = "0.1.17"
url = "2.5.7"
bytes = "1.10.1"
futures = "0.3.31"

[dev-dependencies]
assert_matches = "1.5.0"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["process", "macros", "fs"] }
tokio-test = "0.4.4"

[package.metadata.docs.rs]
all-features = true

[workspace.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "v{{version}}"
consolidate-commits = false
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "^## Unreleased", replace = "## v{{version}} - {{date}}" },
]
