[package]
name = "openapi-client-gen"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive"] }
colog = "1.4.0"
convert_case = "0.8.0"
hashlink = "0.10.0"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.28"
prettyplease = "0.2.37"
proc-macro2 = "1.0.101"
quote = "1.0.40"
regex = "1.11.2"
serde_yaml2 = "0.1.2"
syn = "2.0.106"
thiserror = "2.0.16"
yaml-rust2 = "0.10.3"
